@@ -173,6 +173,7 @@ void printLink(s_link link) {
        if (link.mandatory[0] == 1) printf("on\n");
        else printf("off\n");
    }
+   if (link.autoPause) printf("AutoPause over %u days\n", link.autoPause);
    if (link.optGrp) printf("OptGrp       %s\n", link.optGrp);
    if (link.autoCreateFile) printf("AutoCreateFile: %s\n", link.autoCreateFile);
    if (link.LinkGrp) printf("LinkGrp %s\n",link.LinkGrp);
@@ -180,8 +181,8 @@ void printLink(s_link link) {
    if (link.autoAreaCreate) printf("AutoAreaCreate on\n");
    if (link.AreaFix) printf("AreaFix on\n"); else printf("AreaFix off\n");
    if (link.forwardRequests) printf("Forward Requests from this link is on\n");
-   if (link.fReqFromUpLink) printf("Forward Request on another links is on\n");
-   else printf("Forward Request on another links is off\n");
+   if (link.fReqFromUpLink) printf("Forward Request to another links is on\n");
+   else printf("Forward Request to another links is off\n");
    if (link.RemoteRobotName) printf("RemoteRobotName %s\n", link.RemoteRobotName);
    else printf("RemoteRobotName AreaFix\n");
    if (link.forwardRequestFile) printf("ForwardRequestFile %s\n",link.forwardRequestFile);
