@@ -1,3 +1,9 @@
+
+----- cvs ci ------
+Tue Jun  8 20:53:03
+Fedor:
++ added token AutoPause for links
+
 fidoconfig 0.8
 (released on Mon Jun  7 22:37:09 CEST 1999)
 --------------
